parser/src/parser/snapshots/tests__parser::type_alias::tests::parse_exported_type_alias.snap
---
created: "2020-05-06T10:43:13.322522600Z"
creator: insta@0.8.2
source: parser/src/parser/type_alias.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 22)
  TYPE_ALIAS_DEF@[0; 22)
    VISIBILITY@[0; 6)
      EXPORT_KW@[0; 6) "export"
    WHITESPACE@[6; 7) " "
    TYPE_KW@[7; 11) "type"
    WHITESPACE@[11; 12) " "
    NAME@[12; 15)
      IDENT@[12; 15) "Foo"
    WHITESPACE@[15; 16) " "
    EQ@[16; 17) "="
    WHITESPACE@[17; 18) " "
    IDENT_TYPE@[18; 21)
      IDENT@[18; 21) "i32"
    SEMI@[21; 22) ";"

