parser/src/parser/snapshots/tests__parser::type_alias::tests::parse_type_alias.snap
---
created: "2020-05-06T10:43:13.325079600Z"
creator: insta@0.8.2
source: parser/src/parser/type_alias.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 15)
  TYPE_ALIAS_DEF@[0; 15)
    TYPE_KW@[0; 4) "type"
    WHITESPACE@[4; 5) " "
    NAME@[5; 8)
      IDENT@[5; 8) "Foo"
    WHITESPACE@[8; 9) " "
    EQ@[9; 10) "="
    WHITESPACE@[10; 11) " "
    IDENT_TYPE@[11; 14)
      IDENT@[11; 14) "i32"
    SEMI@[14; 15) ";"

