parser/src/parser/snapshots/tests__parser::type_alias::tests::parse_type_alias_params.snap
---
created: "2020-05-06T10:43:13.327146400Z"
creator: insta@0.8.2
source: parser/src/parser/type_alias.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 37)
  TYPE_ALIAS_DEF@[0; 37)
    TYPE_KW@[0; 4) "type"
    WHITESPACE@[4; 5) " "
    NAME@[5; 16)
      IDENT@[5; 16) "ParseResult"
    TYPE_PARAM_LIST@[16; 19)
      L_ANGLE@[16; 17) "<"
      TYPE_PARAM@[17; 18)
        NAME@[17; 18)
          IDENT@[17; 18) "T"
      R_ANGLE@[18; 19) ">"
    WHITESPACE@[19; 20) " "
    EQ@[20; 21) "="
    WHITESPACE@[21; 22) " "
    IDENT_TYPE@[22; 36)
      IDENT@[22; 28) "Result"
      TYPE_ARG_LIST@[28; 36)
        L_ANGLE@[28; 29) "<"
        IDENT_TYPE@[29; 30)
          IDENT@[29; 30) "T"
        COMMA@[30; 31) ","
        IDENT_TYPE@[31; 35)
          IDENT@[31; 35) "void"
        R_ANGLE@[35; 36) ">"
    SEMI@[36; 37) ";"

