parser/src/parser/snapshots/tests__parser::types::tests::parse_array_type.snap
---
created: "2020-05-06T10:43:13.429282400Z"
creator: insta@0.8.2
source: parser/src/parser/types.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 19)
  FN_DEF@[0; 19)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 16)
      L_PAREN@[7; 8) "("
      PARAM@[8; 15)
        BIND_PAT@[8; 9)
          NAME@[8; 9)
            IDENT@[8; 9) "x"
        COLON@[9; 10) ":"
        ARRAY_TYPE@[10; 15)
          L_BRACK@[10; 11) "["
          IDENT_TYPE@[11; 14)
            IDENT@[11; 14) "i32"
          R_BRACK@[14; 15) "]"
      R_PAREN@[15; 16) ")"
    WHITESPACE@[16; 17) " "
    BLOCK_EXPR@[17; 19)
      BLOCK@[17; 19)
        L_CURLY@[17; 18) "{"
        R_CURLY@[18; 19) "}"

