parser/src/parser/snapshots/tests__parser::types::tests::parse_fn_tuple_type.snap
---
created: "2020-05-06T10:43:13.433862800Z"
creator: insta@0.8.2
source: parser/src/parser/types.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 34)
  FN_DEF@[0; 34)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 31)
      L_PAREN@[7; 8) "("
      PARAM@[8; 30)
        PLACEHOLDER_PAT@[8; 9)
          UNDERSCORE@[8; 9) "_"
        COLON@[9; 10) ":"
        FN_TYPE@[10; 30)
          FN_KW@[10; 12) "fn"
          L_PAREN@[12; 13) "("
          PAREN_TYPE@[13; 22)
            L_PAREN@[13; 14) "("
            IDENT_TYPE@[14; 17)
              IDENT@[14; 17) "i32"
            COMMA@[17; 18) ","
            IDENT_TYPE@[18; 21)
              IDENT@[18; 21) "i32"
            R_PAREN@[21; 22) ")"
          R_PAREN@[22; 23) ")"
          WHITESPACE@[23; 24) " "
          RET_TYPE@[24; 30)
            FRETURN@[24; 26) "->"
            WHITESPACE@[26; 27) " "
            IDENT_TYPE@[27; 30)
              IDENT@[27; 30) "i32"
      R_PAREN@[30; 31) ")"
    WHITESPACE@[31; 32) " "
    BLOCK_EXPR@[32; 34)
      BLOCK@[32; 34)
        L_CURLY@[32; 33) "{"
        R_CURLY@[33; 34) "}"

