parser/src/parser/snapshots/tests__parser::types::tests::parse_tuple_type.snap
---
created: "2020-05-06T10:43:13.521697600Z"
creator: insta@0.8.2
source: parser/src/parser/types.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 23)
  FN_DEF@[0; 23)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 20)
      L_PAREN@[7; 8) "("
      PARAM@[8; 19)
        BIND_PAT@[8; 9)
          NAME@[8; 9)
            IDENT@[8; 9) "x"
        COLON@[9; 10) ":"
        PAREN_TYPE@[10; 19)
          L_PAREN@[10; 11) "("
          IDENT_TYPE@[11; 14)
            IDENT@[11; 14) "i32"
          COMMA@[14; 15) ","
          IDENT_TYPE@[15; 18)
            IDENT@[15; 18) "i32"
          R_PAREN@[18; 19) ")"
      R_PAREN@[19; 20) ")"
    WHITESPACE@[20; 21) " "
    BLOCK_EXPR@[21; 23)
      BLOCK@[21; 23)
        L_CURLY@[21; 22) "{"
        R_CURLY@[22; 23) "}"

