parser/src/parser/snapshots/tests__parser::visibility::tests::parse_pub_class.snap
---
created: "2020-05-06T10:43:13.595942100Z"
creator: insta@0.8.2
source: parser/src/parser/visibility.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 31)
  CLASS_DEF@[0; 30)
    VISIBILITY@[0; 6)
      EXPORT_KW@[0; 6) "export"
    WHITESPACE@[6; 7) " "
    CLASS_KW@[7; 12) "class"
    WHITESPACE@[12; 13) " "
    NAME@[13; 16)
      IDENT@[13; 16) "Foo"
    L_CURLY@[16; 17) "{"
    WHITESPACE@[17; 18) " "
    NAMED_FIELD_DEF@[18; 29)
      NAME@[18; 21)
        IDENT@[18; 21) "bar"
      COLON@[21; 22) ":"
      IDENT_TYPE@[22; 28)
        IDENT@[22; 28) "string"
      SEMI@[28; 29) ";"
    R_CURLY@[29; 30) "}"
  SEMI@[30; 31) ";"

