parser/src/parser/snapshots/tests__parser::visibility::tests::parse_pub_enum.snap
---
created: "2020-05-06T10:43:13.661522400Z"
creator: insta@0.8.2
source: parser/src/parser/visibility.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 18)
  ENUM_DEF@[0; 17)
    VISIBILITY@[0; 6)
      EXPORT_KW@[0; 6) "export"
    WHITESPACE@[6; 7) " "
    ENUM_KW@[7; 11) "enum"
    WHITESPACE@[11; 12) " "
    NAME@[12; 15)
      IDENT@[12; 15) "Bar"
    ENUM_VARIANT_LIST@[15; 17)
      L_CURLY@[15; 16) "{"
      R_CURLY@[16; 17) "}"
  SEMI@[17; 18) ";"

